--- a/FetchDecks/FetchDecks.csproj
+++ b/FetchDecks/FetchDecks.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.33" />
+    <PackageReference Include="AngleSharp" Version="0.15.0" />
     <PackageReference Include="Npgsql" Version="5.0.4" />
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
   <ItemGroup>
