Created psql user specifically for scraper

--- a/FetchDecks/FetchDecks.csproj
+++ b/FetchDecks/FetchDecks.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="connection.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="targets.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
