--- a/dotnet-scraper/Scraper.csproj
+++ b/dotnet-scraper/Scraper.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>FetchDecks.Program</StartupObject>
+    <StartupObject>Scraper.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
