--- a/kubernetes-deployment/pg-deployment.yaml
+++ b/kubernetes-deployment/pg-deployment.yaml
@@ -6,11 +6,11 @@ spec:
  replicas: 1
  selector:
       matchLabels:
-        app.kubernetes.io/app: postgres
+        app: postgres
  template:
    metadata:
       labels:
-        app.kubernetes.io/app: postgres
+        app: postgres
    spec:
      containers:
      - name: pg
