--- a/r-analysis/Dockerfile
+++ b/r-analysis/Dockerfile
@@ -1,7 +1,7 @@
-FROM rocker/r-ver:4.0.5
+FROM r-base
 
 RUN R -e "install.packages(c('DBI', 'analogue', 'stats', 'mclust', 'RPostgres'))"
 
-COPY . .
+COPY ./src /analysis/src
 
-CMD R --slave -e "source('main.r')" 
+CMD Rscript /analysis/src/main.r
