Updated docker for R

--- a/r-analysis/Dockerfile
+++ b/r-analysis/Dockerfile
@@ -1,7 +1,9 @@
 FROM r-base
 
-RUN R -e "install.packages(c('DBI', 'analogue', 'stats', 'mclust', 'RPostgres'))"
-
 COPY ./src /analysis/src
 
-CMD Rscript /analysis/src/main.r
+WORKDIR /analysis/src
+
+RUN ./packages.sh
+
+CMD Rscript main.r
