--- a/kubernetes-deployment/cron/cron.yaml
+++ b/kubernetes-deployment/cron/cron.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: cron
 spec:
-  schedule: "* * * * *"
+  schedule: "0 0 * * *"
   jobTemplate:
     spec:
       template:
