--- a/node-api/package.json
+++ b/node-api/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "export PASSWORD=password && nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,6 @@
     "pg": "^8.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.12"
   }
 }
