Finished deployment of frontend

--- a/kubernetes-deployment/ingress.yaml
+++ b/kubernetes-deployment/ingress.yaml
@@ -27,3 +27,10 @@ spec:
             name: api
             port:
               number: 1337
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              number: 80
