--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -24,5 +24,8 @@ FROM nginx:1.21.1-alpine
 # Move build files to production
 COPY --from=build /app/build /usr/share/nginx/html
 
+# All paths should point to index.html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
